--- a/desafiocordel/style.css
+++ b/desafiocordel/style.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2? family= Sriracha & display=swap');
+
+@import url('https://fonts.googleapis.com/css2? family= Passion+One & display=swap');
+
 header {
     background-color: black;
     text-align: center;
@@ -8,15 +12,16 @@ header {
 }
 header > h1 {
     color: white;
+    font-family: 'Passion One';
 }
 header > a {
     color: white;
     text-decoration: none;
 }
-body {
-    font-family: ;
-}
 
+section {
+    font-family: 'Sriracha';
+}
 
 
 
